# almonds

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Justfile  LICENSE  README.md  cspell.json  design.md  docker-compose.yaml  package-lock.json  package.json  pgadmin-servers.json  roadmap.md  test.db  test.sqlite
almonds/src-tauri/: Cargo.toml  almond.devvvv.db  almonds.db  tauri.conf.json  thealmonds.db
almonds/src-tauri/capabilities/: default.json
almonds/src-tauri/icons/: icon.icns
almonds/src-tauri/src/: errors.rs  lib.rs  scheduler.rs  state.rs
kernel/: .env  .gitignore  Cargo.toml  boltffi.toml  index.ts  package.json  tsconfig.json
kernel/.graphql/: sync_queqe_schema.graphql  sync_queue_query.graphql  sync_queue_schema.graphql
kernel/bindings/: Model.ts  Snippet.ts  bookmark.ts  note_categories.ts  notes.ts  ollama_conversation_history.ts  ollama_conversation_prompt.ts  recycle_bin.ts  reminder.ts  sea_orm_active_enums.ts  snippets.ts  sync_queue.ts  todo.ts  user_preference.ts  workspaces.ts
kernel/graphql/: .env  Cargo.toml
kernel/graphql/src/: main.rs
kernel/migration/: Cargo.toml
kernel/migration/src/: lib.rs  m20260217_143820_create_snippet_table.rs  m20260217_150510_create_sync_queue_table.rs  m20260218_071539_create_ollama_conversation_prompt.rs  m20260218_071549_create_ollama_conversation_response.rs  m20260218_071617_create_ollama_conversation_history.rs  m20260218_110352_create_note_table.rs  m20260218_110353_create_note_category_table.rs  m20260218_171131_create_todo_table.rs  m20260218_204212_create_bookmarks_table.rs  m20260219_214114_add_due_time_to_todo.rs  m20260221_065202_create_reminder_table.rs  m20260221_065819_create_recycle_bin.rs  m20260221_065938_create_user_preference_table.rs  m20260224_214545_create_workspaces.rs  m20260224_220314_add_workspace_id_to_snippet_entities.rs  m20260224_221032_add_workspace_id_to_notes_entities.rs  m20260224_221334_add_workspace_id_to_todo_entities.rs  m20260224_221502_add_workspace_id_to_bookmark_entities.rs  m20260224_221622_add_workspace_id_to_reminder__entities.rs  m20260224_221622_add_workspace_id_to_reminder_entities.rs  m20260224_221707_add_workspace_id_to_recycle_bin_entities.rs  m20260225_221818_drop_notes_new.rs  m20260226_063044_make_notes_categories_optional.rs  m20260226_064924_drop_notes_new.rs  m20260304_080239_create_default_workspace.rs  m20260314_150343_create_trigger_for_bookmarks.rs  m20260327_000000_add_workspace_id_to_user_preference.rs  m20260331_000000_add_workspace_flags.rs  m20260403_000000_add_workspace_security.rs  m20260501_000000_fix_sync_queue_uuid_triggers.rs  m20260518_000000_remove_email_unique_constraint_from_user_preference.rs  m20260528_200000_add_workspace_and_is_read_to_notifications.rs
kernel/src/: boltffi.rs  enums.rs  error.rs  kernel.rs  lib.rs  markdown2pdf.rs  sync_engine.rs  sync_queue_query.rs  types.rs  utils.rs
kernel/src/adapters/: bookmarks.rs  meta.rs  mod.rs  notes.rs  ollama_conversations.rs  recycle_bin.rs  reminder.rs  snippets.rs  sync_queue.rs  todo.rs  user_preference.rs  workspace.rs
kernel/src/contracts/: graphql_client.rs  mod.rs  sync_queue_query.rs
kernel/src/entities/: bookmark.rs  bookmark_new.rs  mod.rs  note_categories.rs  notes.rs  notes_note_categories.rs  ollama_conversation_history.rs  ollama_conversation_prompt.rs  ollama_conversation_response.rs  prelude.rs  recycle_bin.rs  reminder.rs  snippets.rs  sync_queue.rs  todo.rs  user_preference.rs  workspace.rs  workspaces.rs
kernel/src/repositories/: bookmarks.rs  mod.rs  notes.rs  ollama_conversation.rs  prelude.rs  recycle_bin.rs  reminder.rs  snippets.rs  sync_queue.rs  todo.rs  user_preference.rs  workspace.rs  workspace_manager.rs
kernel/tests/: bookmarks.rs  kernel.rs  notes.rs  recycle_bin.rs  shared.rs  snippets.rs  todo.rs  workspace.rs
mobile/rust/: Cargo.toml
mobile/rust/src/: error.rs  frb_generated.rs  lib.rs  state.rs
orchard/: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  almond.db  docker-compose.yaml  test.db  test.sqlite
orchard/docker/dev/: Dockerfile.app
orchard/migration/src/: lib.rs  m20251225_140002_create_user_table.rs  m20251225_142516_create_library_table.rs  m20251225_142651_create_playlist_table.rs  m20251225_142851_create_fk_on_audio_books.rs  m20251225_143403_create_fk_on_user_playlist.rs  m20251225_143557_rename_playlist_about.rs  m20251225_144242_rename_playlist.rs  m20251225_144622_create_otp_table.rs  m20251225_144754_update_otp_code.rs  m20251225_150002_create_notification_table.rs  m20251225_150349_add_countries.rs  m20251225_150508_add_country_identifier_to_users_table.rs  m20251225_150712_add_starred_to_audio_books.rs  m20251227_224856_make_profile_picture_nullable.rs  m20251227_225947_make_user_name_nullable.rs  m20251230_024609_support_2fa.rs  m20251230_024817_support_biometrics.rs  m20251230_025025_create_reference_email_table.rs  m20260101_182310_rename_reference_email_to_backup_email.rs  m20260130_010025_create_waitlist_table.rs  main.rs
orchard/src/: errors.rs  lib.rs  main.rs  query_root.rs  shutdown.rs  states.rs
orchard/src/adapters/: audio_books.rs  authentication.rs  country.rs  jwt.rs  mod.rs  pagination.rs  profile.rs  repository.rs  request.rs  users.rs  wait_list.rs
orchard/src/cli/: actors.rs  app.rs  mod.rs  parser.rs
orchard/src/config/: app.rs  database.rs  env.rs  filesystem.rs  mod.rs  tasks.rs
orchard/src/dto/: common.rs  mod.rs  notifications.rs  user.rs
orchard/src/entities/: audio_books.rs  backup_emails.rs  bookmark.rs  countries.rs  mod.rs  note_categories.rs  notes.rs  notifications.rs  ollama_conversation_history.rs  ollama_conversation_prompt.rs  ollama_conversation_response.rs  one_time_passwords.rs  orchard_migrations.rs  playlists.rs  prelude.rs  recycle_bin.rs  reference_emails.rs  reminder.rs  sea_orm_active_enums.rs  snippets.rs  sync_queue.rs  todo.rs  user_preference.rs  users.rs  wait_list.rs  workspace.rs  workspaces.rs
orchard/src/errors/: app_error.rs  auth_error.rs  database_error.rs  mod.rs  service_error.rs  (+1 more)
shurbs/rust/: Cargo.toml
(+638 files in other folders)
