[package]
name = "almond_kernel"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration"]

[dependencies]
log = "0.4.29"
sea-orm = { version = "2.0.0-rc", features = [
    "sqlx-sqlite",
    "sqlx-mysql",
    "sqlx-postgres",
    "macros",
    "seaography",
    "mock",
    "debug-print",
    "with-uuid",
    "with-chrono",
    "runtime-tokio-rustls",
] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
migration = { path = "migration" }
ts-rs = "12.0.1"
uuid = { version = "1.21.0", features = ["v4"] }
