[package]
name = "almond_kernel"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration"]

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4.29"
migration = { path = "migration" }
sanitizer = "1.0.0"
sea-orm = { version = "2.0.0-rc", features = [
    "sqlx-sqlite",
    "sqlx-mysql",
    "sqlx-postgres",
    "macros",
    "seaography",
    "mock",
    "debug-print",
    "with-uuid",
    "with-chrono",
    "runtime-tokio-rustls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
uuid = { version = "1.21.0", features = ["v4"] }
