[package]
name = "almond_kernel"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration"]

[features]
default = ["sqlite"]
sqlite = ["sea-orm/sqlx-sqlite"]
postgres = ["sea-orm/sqlx-postgres"]
mysql = ["sea-orm/sqlx-mysql"]

[dependencies]
argon2 = "0.5"
async-trait = "0.1.89"
chrono = { version = "0.4", features = ["serde"] }
graphql-ws-client = { version = "0.12.1", features = ["client-graphql-client"] }
graphql_client = { version = "0.16.0" }
ironpress = { version = "1.2.1" }
log = "0.4.29"
migration = { path = "migration" }
reqwest = { version = "0.13.2", features = ["json"] }
sanitizer = { version = "1.0.0", features = ["derive"] }
sea-orm = { version = "2.0.0-rc.37", features = [
    "macros",
    "mock",
    "debug-print",
    "with-uuid",
    "with-chrono",
    "runtime-tokio-rustls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
uuid = { version = "1.21.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
fake = "4.4.0"
lazy_static = "1.5.0"
