[package]
edition = "2021"
name = "orchard"
version = "0.1.0"

[dependencies]
axum = { version = "0.8" }
async-graphql-axum = { version = "7.0" }
dotenv = "0.15.0"
tokio = { version = "1.29.1", features = ["full"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17" }
almond_kernel = { version = "0.1.0", path = "../kernel" }
tower-http = { version = "0.6.8", features = ["limit", "trace", "cors", "timeout", "sensitive-headers"] }
thiserror = "2.0.18"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }

[dependencies.sea-orm]
version = "~2.0.0-rc"
features = ["sqlx-sqlite", "runtime-tokio-native-tls", "seaography"]

[dependencies.seaography]
version = "~2.0.0-rc.8" # seaography version
features = ["graphql-playground", "with-decimal", "with-chrono"]

[dev-dependencies]
serde_json = { version = "1.0.103" }

[workspace]
members = []
