[package]
edition = "2021"
name = "orchard"
version = "0.1.0"
default-run = "orchard"

[workspace]
members = []

[lib]
name = "orchard_lib"
path = "src/lib.rs"

[dependencies]
almond_kernel = { version = "0.1.0", path = "../kernel" }
async-graphql-axum = { version = "7.0" }
axum = { version = "0.8" }
clap = "4.5.60"
console = "0.16.2"
dialoguer = "0.12.0"
dotenv = "0.15.0"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.29.1", features = ["full"] }
tower-http = { version = "0.6.8", features = [
    "limit",
    "trace",
    "cors",
    "timeout",
    "sensitive-headers",
] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17" }

[dependencies.sea-orm]
version = "~2.0.0-rc"
features = [
    "sqlx-sqlite",
    "sqlx-mysql",
    "sqlx-postgres",
    "macros",
    "mock",
    "debug-print",
    "with-uuid",
    "with-chrono",
    "runtime-tokio-rustls",
    "seaography",
]

[dependencies.seaography]
version = "~2.0.0-rc.8"                                                       # seaography version
features = ["graphql-playground", "with-decimal", "with-chrono", "with-uuid"]

[dev-dependencies]
serde_json = { version = "1.0.103" }
