[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
almond_kernel = { version = "0.1.0", path = "../../kernel" }
chrono = { version = "0.4.43", features = ["serde"] }
log = "0.4"
sanitizer = { version = "1.0.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
thiserror = "2"
ts-rs = "10.1.0"
uuid = { version = "1", features = ["v4", "serde"] }
validator = { version = "0.19.0", features = ["derive"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }
