[package]
edition = "2021"
name = "kernel-graphql"
version = "0.1.0"

[dependencies]
poem = { version = "3.0" }
async-graphql-poem = { version = "7.0" }
dotenv = "0.15.0"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17" }
serde = { version = "1.0.228", features = ["derive"] }

[dependencies.sea-orm]
version = "~2.0.0-rc"
features = ["sqlx-sqlite", "runtime-tokio-native-tls", "seaography"]

[dependencies.seaography]
version = "~2.0.0-rc.8" # seaography version
features = ["graphql-playground", "with-decimal", "with-chrono"]

[dev-dependencies]
serde_json = { version = "1.0.103" }


