[workspace]

[package]
name = "rust_lib_shurbs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.23.0", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1"
almond_kernel = { path = "../../kernel" }
chrono = "0.4.44"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
