[workspace]

[package]
name = "rust_lib_shurbs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
almond_kernel = { path = "../../kernel" }
uuid = { version = "1", features = ["v4"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
